--- a/teams.html
+++ b/teams.html
@@ -30,6 +30,7 @@
         </nav>
    
 </header>   
+
 <div style="overflow-y: scroll; height: 800px; background-color: rgb(144,144,144, 0.8);" >
 <div class="kosice-team" >
         <p class="nazov-klubu">HC KOŠICE</p>
@@ -56,13 +57,13 @@
 
         <table class="kosice-team">
             <thead>          
-                <th>Najlepší hráč</th>
+                <th>Najlepší hráč</th>              
                 <th>Body</th>
             </thead>
             <tbody>
                 <tr>
-                    <td>Filip Fuchs</td>
-                    <td></td>
+                    <td><b>C</b> Filip Fuchs <img src="img/nat/cz.gif"></td>
+                    <td>22</td>
                 </tr>
             </tbody>
         </table> 
@@ -73,8 +74,8 @@
             </thead>
             <tbody>
                 <tr>
-                    <td></td>
-                    <td></td>
+                    <td><b>LW</b> Michel Rossignol <img src="img/nat/fra.gif"></td>
+                    <td>14</td>
                 </tr>
             </tbody>
         </table>         
@@ -112,8 +113,8 @@
             </thead>
             <tbody>
                 <tr>
-                    <td></td>
-                    <td></td>
+                    <td><b>LW</b> Tadeáš Kropuch <img src="img/nat/svk.gif"></td>
+                    <td>4</td>
                 </tr>
             </tbody>
         </table> 
@@ -124,8 +125,8 @@
             </thead>
             <tbody>
                 <tr>
-                    <td></td>
-                    <td></td>
+                    <td><b>LW</b> Tadeáš Kropuch <img src="img/nat/svk.gif"></td>
+                    <td>4</td>
                 </tr>
             </tbody>
         </table>  
@@ -161,8 +162,8 @@
             </thead>
             <tbody>
                 <tr>
-                    <td></td>
-                    <td></td>
+                    <td><b>C</b> Herman Lohmus <img src="img/nat/est.gif"></td>
+                    <td>39</td>
                 </tr>
             </tbody>
         </table> 
@@ -173,8 +174,8 @@
             </thead>
             <tbody>
                 <tr>
-                    <td></td>
-                    <td></td>
+                    <td><b>LW</b> Lari Suorsa <img src="img/nat/fin.gif"></td>
+                    <td>15</td>
                 </tr>
             </tbody>
         </table>  
@@ -212,8 +213,8 @@
             </thead>
             <tbody>
                 <tr>
-                    <td></td>
-                    <td></td>
+                    <td><b>RW</b> Reggie Glover <img src="img/nat/uk.gif"></td>
+                    <td>9</td>
                 </tr>
             </tbody>
         </table> 
@@ -224,8 +225,8 @@
             </thead>
             <tbody>
                 <tr>
-                    <td></td>
-                    <td></td>
+                    <td><b>RW</b> Reggie Glover <img src="img/nat/uk.gif"></td>
+                    <td>9</td>
                 </tr>
             </tbody>
         </table>  
@@ -262,8 +263,8 @@
             </thead>
             <tbody>
                 <tr>
-                    <td></td>
-                    <td></td>
+                    <td><b>RW</b> Pavol Ostrožlík <img src="img/nat/svk.gif"></td>
+                    <td>11</td>
                 </tr>
             </tbody>
         </table> 
@@ -274,8 +275,8 @@
             </thead>
             <tbody>
                 <tr>
-                    <td></td>
-                    <td></td>
+                    <td><b>RW</b> Pavol Ostrožlík <img src="img/nat/svk.gif"></td>
+                    <td>11</td>
                 </tr>
             </tbody>
         </table>  
@@ -312,8 +313,8 @@
             </thead>
             <tbody>
                 <tr>
-                    <td></td>
-                    <td></td>
+                    <td><b>C</b>Andrew Hicks <img src="img/nat/can.gif"></td>
+                    <td>11</td>
                 </tr>
             </tbody>
         </table> 
@@ -324,8 +325,8 @@
             </thead>
             <tbody>
                 <tr>
-                    <td></td>
-                    <td></td>
+                    <td><b>LW</b>Corentin Boucher <img src="img/nat/fra.gif"></td>
+                    <td>6</td>
                 </tr>
             </tbody>
         </table>  
@@ -405,8 +406,8 @@
             </thead>
             <tbody>
                 <tr>
-                    <td></td>
-                    <td></td>
+                    <td><b>LD</b>Ingolf Rustad <img src="img/nat/nor.gif"></td>
+                    <td>12</td>
                 </tr>
             </tbody>
         </table> 
@@ -417,8 +418,8 @@
             </thead>
             <tbody>
                 <tr>
-                    <td></td>
-                    <td></td>
+                    <td><b>rW</b>Muli Ziglin <img src="img/nat/isr.gif"></td>
+                    <td>6</td>
                 </tr>
             </tbody>
         </table>  
@@ -451,8 +452,8 @@
             </thead>
             <tbody>
                 <tr>
-                    <td></td>
-                    <td></td>
+                    <td>Roger Rebaza</td>
+                    <td>10</td>
                 </tr>
             </tbody>
         </table> 
@@ -463,8 +464,8 @@
             </thead>
             <tbody>
                 <tr>
-                    <td></td>
-                    <td></td>
+                    <td>Roger Rebaza</td>
+                    <td>7</td>
                 </tr>
             </tbody>
         </table>  
@@ -498,8 +499,8 @@
             </thead>
             <tbody>
                 <tr>
-                    <td></td>
-                    <td></td>
+                    <td>Krišjānis Videnieks</td>
+                    <td>11</td>
                 </tr>
             </tbody>
         </table> 
@@ -510,8 +511,8 @@
             </thead>
             <tbody>
                 <tr>
-                    <td></td>
-                    <td></td>
+                    <td>Krišjānis Videnieks</td>
+                    <td>7</td>
                 </tr>
             </tbody>
         </table>  
@@ -544,8 +545,8 @@
             </thead>
             <tbody>
                 <tr>
-                    <td></td>
-                    <td></td>
+                    <td>Stefan Carrier</td>
+                    <td>8</td>
                 </tr>
             </tbody>
         </table> 
@@ -556,8 +557,8 @@
             </thead>
             <tbody>
                 <tr>
-                    <td></td>
-                    <td></td>
+                    <td>Stefan Carrier</td>
+                    <td>8</td>
                 </tr>
             </tbody>
         </table>  
@@ -590,8 +591,8 @@
             </thead>
             <tbody>
                 <tr>
-                    <td></td>
-                    <td></td>
+                    <td>Ján Galis</td>
+                    <td>12</td>
                 </tr>
             </tbody>
         </table> 
@@ -602,8 +603,8 @@
             </thead>
             <tbody>
                 <tr>
-                    <td></td>
-                    <td></td>
+                    <td>Ján Galis</td>
+                    <td>10</td>
                 </tr>
             </tbody>
         </table>  
