--- a/teams.html
+++ b/teams.html
@@ -313,7 +313,7 @@
             </thead>
             <tbody>
                 <tr>
-                    <td><b>C</b>Andrew Hicks <img src="img/nat/can.gif"></td>
+                    <td><b>C</b> Andrew Hicks <img src="img/nat/can.gif"></td>
                     <td>11</td>
                 </tr>
             </tbody>
@@ -325,7 +325,7 @@
             </thead>
             <tbody>
                 <tr>
-                    <td><b>LW</b>Corentin Boucher <img src="img/nat/fra.gif"></td>
+                    <td><b>LW</b> Corentin Boucher <img src="img/nat/fra.gif"></td>
                     <td>6</td>
                 </tr>
             </tbody>
@@ -406,7 +406,7 @@
             </thead>
             <tbody>
                 <tr>
-                    <td><b>LD</b>Ingolf Rustad <img src="img/nat/nor.gif"></td>
+                    <td><b>LD</b> Ingolf Rustad <img src="img/nat/nor.gif"></td>
                     <td>12</td>
                 </tr>
             </tbody>
@@ -418,7 +418,7 @@
             </thead>
             <tbody>
                 <tr>
-                    <td><b>rW</b>Muli Ziglin <img src="img/nat/isr.gif"></td>
+                    <td><b>RW</b> Muli Ziglin <img src="img/nat/isr.gif"></td>
                     <td>6</td>
                 </tr>
             </tbody>
@@ -452,7 +452,7 @@
             </thead>
             <tbody>
                 <tr>
-                    <td>Roger Rebaza</td>
+                    <td><b>RW</b> Roger Rebaza <img src="img/nat/peru.gif"></td>
                     <td>10</td>
                 </tr>
             </tbody>
@@ -464,7 +464,7 @@
             </thead>
             <tbody>
                 <tr>
-                    <td>Roger Rebaza</td>
+                    <td><b>RW</b> Roger Rebaza <img src="img/nat/peru.gif"></td>
                     <td>7</td>
                 </tr>
             </tbody>
@@ -499,7 +499,7 @@
             </thead>
             <tbody>
                 <tr>
-                    <td>Krišjānis Videnieks</td>
+                    <td><b>RW</b> Krišjānis Videnieks <img src="img/nat/lot.gif"></td>
                     <td>11</td>
                 </tr>
             </tbody>
@@ -511,7 +511,7 @@
             </thead>
             <tbody>
                 <tr>
-                    <td>Krišjānis Videnieks</td>
+                    <td><b>RW</b> Krišjānis Videnieks <img src="img/nat/lot.gif"></td>
                     <td>7</td>
                 </tr>
             </tbody>
@@ -545,7 +545,7 @@
             </thead>
             <tbody>
                 <tr>
-                    <td>Stefan Carrier</td>
+                    <td><b>RW</b> Stefan Carrier <img src="img/nat/can.gif"></td>
                     <td>8</td>
                 </tr>
             </tbody>
@@ -557,7 +557,7 @@
             </thead>
             <tbody>
                 <tr>
-                    <td>Stefan Carrier</td>
+                    <td><b>RW</b> Stefan Carrier <img src="img/nat/can.gif"></td>
                     <td>8</td>
                 </tr>
             </tbody>
@@ -591,7 +591,7 @@
             </thead>
             <tbody>
                 <tr>
-                    <td>Ján Galis</td>
+                    <td><b>RW</b> Ján Galis <img src="img/nat/svk.gif"></td>
                     <td>12</td>
                 </tr>
             </tbody>
@@ -603,7 +603,7 @@
             </thead>
             <tbody>
                 <tr>
-                    <td>Ján Galis</td>
+                    <td><b>RW</b> Ján Galis <img src="img/nat/svk.gif"></td>
                     <td>10</td>
                 </tr>
             </tbody>
