--- a/standings.html
+++ b/standings.html
@@ -238,141 +238,9 @@
                         </tbody>            
                    </table>     
             </div>
-            <div id="results" align="center">
-                <table class="vysledky">
-                    <thead>
-                        <th>1.kolo</th>
-                    </thead>
-                    <tbody>
-                        <tr>
-                            <td><img src="img/small/trencin-small.png"></td>
-                            <td class="c-name">Dukla Trenčín</td>
-                            <td class="vysledok">2</td>
-                        </tr>
-                         <tr>
-                            <td><img src="img/small/michalovce-small.png"></td>
-                            <td class="c-name">Michalovce</td>
-                            <td class="vysledok">5</td>
-                        </tr>     
-                    </tbody>    
-                </table>
-                <table class="vysledky">
-                    <thead>
-                        <th>1.kolo</th>
-                    </thead>
-                    <tbody>
-                        <tr>
-                            <td><img src="img/small/poprad-small.png"></td>
-                            <td class="c-name">Poprad</td>
-                            <td class="vysledok">2</td>
-                        </tr>
-                         <tr>
-                            <td><img src="img/small/skalica-small.png"></td>
-                            <td class="c-name">Skalica</td>
-                            <td class="vysledok">5</td>
-                        </tr>     
-                    </tbody>    
-                </table>
-                <table class="vysledky">
-                    <thead>
-                        <th>1.kolo</th>
-                    </thead>
-                    <tbody>
-                        <tr>
-                            <td><img src="img/small/nitra-small.png"></td>
-                            <td class="c-name">Nitra</td>
-                            <td class="vysledok">2</td>
-                        </tr>
-                         <tr>
-                            <td><img src="img/small/bb-small.png"></td>
-                            <td class="c-name">Banská Bystrica</td>
-                            <td class="vysledok">5</td>
-                        </tr>     
-                    </tbody>    
-                </table>
-                <table class="vysledky">
-                    <thead>
-                        <th>1.kolo</th>
-                    </thead>
-                    <tbody>
-                        <tr>
-                            <td><img src="img/small/snv-small.png"></td>
-                            <td class="c-name">Spišská Nová Ves</td>
-                            <td class="vysledok">2</td>
-                        </tr>
-                         <tr>
-                            <td><img src="img/small/mikulas-small.png"></td>
-                            <td class="c-name">Liptovský Mikuláš</td>
-                            <td class="vysledok">5</td>
-                        </tr>     
-                    </tbody>    
-                </table>
-                <table class="vysledky">
-                    <thead>
-                        <th>1.kolo</th>
-                    </thead>
-                    <tbody>
-                        <tr>
-                            <td><img src="img/small/slovan-small.png"></td>
-                            <td class="c-name">Slovan Bratislava</td>
-                            <td class="vysledok">2</td>
-                        </tr>
-                         <tr>
-                            <td><img src="img/small/zvolen-small.png"></td>
-                            <td class="c-name">Zvolen</td>
-                            <td class="vysledok">5</td>
-                        </tr>     
-                    </tbody>    
-                </table>
-                <table class="vysledky">
-                    <thead>
-                        <th>1.kolo</th>
-                    </thead>
-                    <tbody>
-                        <tr>
-                            <td><img src="img/small/kosice-small.png"></td>
-                            <td class="c-name">Košice</td>
-                            <td class="vysledok">2</td>
-                        </tr>
-                         <tr>
-                            <td><img src="img/small/bardejov-small.png"></td>
-                            <td class="c-name">Bardejov</td>
-                            <td class="vysledok">5</td>
-                        </tr>     
-                    </tbody>    
-                </table>
-                <table class="vysledky">
-                    <thead>
-                        <th>1.kolo</th>
-                    </thead>
-                    <tbody>
-                        <tr>
-                            <td><img src="img/small/zilina-small.png"></td>
-                            <td class="c-name">Žilina</td>
-                            <td class="vysledok">2</td>
-                        </tr>
-                         <tr>
-                            <td><img src="img/small/detva-small.png"></td>
-                            <td class="c-name">Detva</td>
-                            <td class="vysledok">5</td>
-                        </tr>     
-                    </tbody>    
-                </table>
-                <table class="vysledky">
-                            <tr>
-                                <td class="none-border"></td>
-                                <td class="none-border" style="float: right;">⭐</td>
-                                <td class="none-border" class="rounds" style="padding-left: 5px; font-weight: bold;" >Hviezda kola</td>
-                                <td class="none-border"></td> 
-                            </tr>
-                             <tr>
-                                <td style="padding-bottom: 3px;"></td>
-                                <td style="padding-bottom: 3px;"></td>
-                                <td style="padding-bottom: 3px;" class="rounds"></td> 
-                                <td style="padding-bottom: 3px;"></td>
-                            </tr>
-            </div>
-            
+           <div id="HAlink">
+                <a  style="margin: 0 auto;" href="https://www.hockeyarena.net/sk/index.php?smenu=mpublic"><img src="img/hockeyarena.png" height="100" align="center" ></a>
+            </div> 
 </div>
 
 
