--- a/schedule.html
+++ b/schedule.html
@@ -21,7 +21,7 @@
                 <li><a href="standings.html" style="text-decoration: none;color: white;">Standings</a></li>
                 <li><a href="#" style="text-decoration: none;color: white;">Stats</a></li>
                 <li><a href="#" style="text-decoration: none;color: white;">Play-off</a></li>
-                <li><a href="teams.html" style="text-decoration: none;color: white;">Teams</a></li>
+                <li><a href="team.html" style="text-decoration: none;color: white;">Teams</a></li>
                 <li><a href="#" style="text-decoration: none;color: white;">Hall of Fame</a></li>
                 <li><a href="managers.html" style="text-decoration: none;color: white;">Managers</a></li>
                 <li><a href="rules.html" style="text-decoration: none;;color: white;">Rules</a></li>
