--- a/standings.html
+++ b/standings.html
@@ -198,7 +198,7 @@
                             </tr>
                              <tr>
                                 <td class="nepostupuje">12.</td>
-                                <td class="logo"><img src="img/logo/skalica.png" height="22"></td>
+                                <td class="logo"><img src="img/logo/Skalica.png" height="22"></td>
                                 <td class="club-name"><a href="https://www.hockeyarena.net/sk/index.php?p=public_team_info_basic.php&team_id=2991"style="color: black;">Skalica</a></td>
                                 <td class="stats"></td>
                                 <td class="stats"></td>
