--- a/rules.html
+++ b/rules.html
@@ -46,7 +46,7 @@
                 
 
                     <p><b style="color:#BD0000;font-size: 30px; ">Základná časť</b></p>
-                    <p><img src="img/hockeystick.png" height="25"> <b>Hracie dni Sobota-Nedeľa</b></p>
+                    <p><img src="img/hockeystick.png" height="25"> <b>Hracie dni Sobota - Nedeľa</b></p>
                     <p>Plánovanie zápasov - <b>PLAY-OFF</b> </p>
                     <p> Základná časť sa hraje formátom každy proti každému <b>bez odvetných zápasov</b>. Jedna skupina, v ktorej sa stretnú všetky prihlásené tímy v turnaji.</p>
                     <p> Rozhoduje - Počet bodov > Vzájomné zápasy  > Skóre > Počet vstrelených gólov  </p>
@@ -54,7 +54,7 @@
                     <p>Víťazovi základnej časti bude odovzdaný  <b style="color: #DAA520; font-family: italic; font-size: 17px;">Pohár Dušana Pašeka</b> <img src="img/pasek_pohar.png" height="50"></p>
 
                     <p><b style="color:#BD0000; font-size: 30px;">Play-off</b></p>
-                    <p><img src="img/hockeystick.png" height="25"> <b>Hracie dni Sobota-Nedeľa-Streda</b></p>
+                    <p><img src="img/hockeystick.png" height="25"> <b>Hracie dni Sobota - Nedeľa - Streda(podľa možností)</b></p>
                     <p>Plánovanie zápasov - <b>PLAY-OFF</b> </p>
                     <p>Tímy na <b>1.</b> až <b>8. mieste</b> postupujú do <b> štvrťfinále Play-off</b>.</p>
                     <p><b>Formát - 1v8...2v7...3v6...4v5</b></p>
