--- a/rules.html
+++ b/rules.html
@@ -62,7 +62,7 @@
                     <p>Víťaz Play-off získava  <b style="color: #DAA520; font-family: italic; font-size: 17px;">Pohár Vladimíra Dzurillu</b> <img src="img/pohar_dzurilla.png" height="50"></p>
                 
                 
-                   <p><b>Dôležité pre každého zúčastneného manažéra</b></p>
+                   <p><b  style="color:#BD0000;font-size: 30px; ">Dôležité pre každého zúčastneného manažéra</b></p>
                    <p class="pre-manazerov"><b style="color: #BD0000">! Každú stredu daného týždňa sa budu kontrolovať výzvy na zápasy !</b> </p>
                    <p class="pre-manazerov"><b style="color: #BD0000">! Neprijatie výzvy bude znamenať kontumáciu v prospech toho manažéra, ktorý výzvu poslal. Výsledok zápasu bude 3:0 !</b> </p>
                    <p class="pre-manazerov"><b style="color: #BD0000">! Taktiež neodoslanie výzvy z oboch strán bude znamenať kontumáciu zápasu za stavu 0:0 a zisku 0 bodov pre oba tímy !</b> </p>
