--- a/rules.html
+++ b/rules.html
@@ -35,9 +35,6 @@
 
             <div class="rules"style="display: flex;">
 
-                <div >
-                    <img class="rule-model" src="img/ladies/model1.jpg">
-                </div>
 
                 <div class="rules-article">
                     <p style="font-size: 40px"><b>Pravidlá Turnaja</b>  <img src="img/rozhodca.png" height="35"> </p>
@@ -69,8 +66,8 @@
                    <p class="pre-manazerov"><b style="color: #BD0000">! Máte šancu dostať len 2 kontumácie. 3 kontumácia (tri neodohrané zápasy) bude znamenať, že letíte z turnaja na čiernu listinu !</b> </p>
                    <p>Zároveň <b>každý manažér</b> bude mať možnosť kliknúť na súperov tím v sekcii <b>Schedule</b>/<b>Standings</b> pre rýchlejšie vyhľadávanie a nasledujúce zorganizovanie zápasu :)</p>
                   
-                   <p align="center" style="font-size: 12px;">Kontakt<a href="https://www.hockeyarena.net/sk/index.php?p=manager_manager_info.php&id=722006"> DementedMate </a></p>
-                   <p align="center" style="font-size: 12px;"><a href="https://www.hockeyarena.net/sk/"> Hockeyarena.net</a></p>
+                   <p align="center" style="font-size: 12px;">Kontakt<a href="https://www.hockeyarena.net/sk/index.php?p=manager_manager_info.php&id=722006" style="text-decoration: none;color: white;"> DementedMate </a></p>
+                   <p align="center" style="font-size: 12px;"><a href="https://www.hockeyarena.net/sk/" style="text-decoration: none;color: white;"> Hockeyarena.net</a></p>
                 </div>
             </div>    
 
