--- a/managers.html
+++ b/managers.html
@@ -92,7 +92,7 @@
     </div>
 
      <div class="skalica-manazer" id="manazer" align="center">
-        <img class="logo-manazer" src="img/logo/skalica.png" height="250px">
+        <img class="logo-manazer" src="img/logo/Skalica.png" height="250px">
         <h3> Manažér - <a href="https://www.hockeyarena.net/sk/index.php?p=manager_manager_info.php&id=11320">mar331</a></h3>
     </div>
 
