--- a/rules.html
+++ b/rules.html
@@ -64,7 +64,7 @@
                    <p><b style="color: #BD0000">! Neprijatie výzvy bude znamenať kontumáciu v prospech toho manažéra, ktorý výzvu poslal. Výsledok zápasu bude 3:0 !</b> </p>
                    <p><b style="color: #BD0000">! Taktiež neodoslanie výzvy z oboch strán bude znamenať kontumáciu zápasu za stavu 0:0 a zisku 0 bodov pre oba tímy !</b> </p>
                    <p ><b style="color: #BD0000">! Máte šancu dostať len 2 kontumácie. 3 kontumácia (tri neodohrané zápasy) bude znamenať, že letíte z turnaja na čiernu listinu !</b> </p>
-                   <p>Zároveň <b>každý manažér</b> bude mať možnosť kliknúť na súperov tím v sekcii <b>Schedule</b>/<b>Standings</b> pre rýchlejšie vyhľadávanie a nasledujúce zorganizovanie zápasu :)</p>
+                   <p>Zároveň <b>každý manažér</b> bude mať možnosť kliknúť na súperov tím v sekcii <b>Schedule</b>/<b>Standings</b>/<b>Managers</b> pre rýchlejšie vyhľadávanie a nasledujúce zorganizovanie zápasu :)</p>
                   
                    <p align="center" style="font-size: 12px;">Kontakt<a href="https://www.hockeyarena.net/sk/index.php?p=manager_manager_info.php&id=722006" style="text-decoration: none;color: white;"> DementedMate </a></p>
                    <p align="center" style="font-size: 12px;"><a href="https://www.hockeyarena.net/sk/" style="text-decoration: none;color: white;"> Hockeyarena.net</a></p>
