--- a/standings.html
+++ b/standings.html
@@ -236,7 +236,15 @@
                                 <td class="stats"></td>
                             </tr>
                         </tbody>            
-                   </table>     
+                   </table>                         
+            </div>
+            <div class="info-o-postupe">
+                     <div>
+                       <img src="img/postupuje.png" height="20"> Postupuje - Play-off
+                    </div>
+                    <div>
+                       <img src="img/nepostupuje.png" height="20"> Nepostupuje
+                    </div>
             </div>
            <div id="HAlink">
                 <a  style="margin: 0 auto;" href="https://www.hockeyarena.net/sk/index.php?smenu=mpublic"><img src="img/hockeyarena.png" height="100" align="center" ></a>
