--- a/managers.html
+++ b/managers.html
@@ -43,7 +43,7 @@
 
     <div class="trencin-manazer" id="manazer" align="center">
         <img class="logo-manazer" src="img/logo/trencin.png" height="250px">
-        <h3> Manažér - <a href="https://www.hockeyarena.net/sk/index.php?p=manager_manager_info.php&id=687506">Lukass58</a></h3>
+        <h3> Manažér - <a href="https://www.hockeyarena.net/sk/index.php?p=manager_manager_info.php&id=155971">PedroSK</a></h3>
     </div>
 
     <div class="poprad-manazer" id="manazer" align="center">
