--- a/team.html
+++ b/team.html
@@ -498,7 +498,7 @@
 
 <div class="skalica-team" >
         <p class="nazov-klubu">HK SKALICA</p>
-        <img class="team-logo" src="img/logo/skalica.png" height="100">
+        <img class="team-logo" src="img/logo/Skalica.png" height="100">
         <img src="img/jersey-nhl/skalica.png" height="150" style="margin-left: 50px;">
         <img src="img/jersey-nhl/skalica-vonku.png" height="150">
 
