--- a/schedule.html
+++ b/schedule.html
@@ -22,7 +22,7 @@
                 <li><a href="#" style="text-decoration: none;color: white;">Stats</a></li>
                 <li><a href="#" style="text-decoration: none;color: white;">Play-off</a></li>
                 <li><a href="team.html" style="text-decoration: none;color: white;">Teams</a></li>
-                <li><a href="#" style="text-decoration: none;color: white;">Hall of Fame</a></li>
+                <li><a href="halloffame.html" style="text-decoration: none;color: white;">Hall of Fame</a></li>
                 <li><a href="managers.html" style="text-decoration: none;color: white;">Managers</a></li>
                 <li><a href="rules.html" style="text-decoration: none;;color: white;">Rules</a></li>
     		</ul>
