--- a/halloffame.html
+++ b/halloffame.html
@@ -128,7 +128,7 @@
     <br>
     <p><b style="color: goldenrod;">Zlatá korčula</b> - Najproduktívnejší hráč Play-off</p>
     <p><b style="color: goldenrod;">Pohár Dušana Pašeka</b> - Víťaz Základnej časti</p>
-    <p><b style="color: goldenrod;">Pohár Vladimíra Dzurillu</b> - Víťaz Play-off (Masjter)</p>
+    <p><b style="color: goldenrod;">Pohár Vladimíra Dzurillu</b> - Víťaz Play-off (Majster)</p>
 
 
 </div>
