--- a/halloffame.html
+++ b/halloffame.html
@@ -126,10 +126,10 @@
 
     <br>
     <br>
-    <p><b style="color: goldenrod;">Zlatá korčula</b> - Najproduktívnejší hráč Play-off</p>
     <p><b style="color: goldenrod;">Pohár Dušana Pašeka</b> - Víťaz Základnej časti</p>
     <p><b style="color: goldenrod;">Pohár Vladimíra Dzurillu</b> - Víťaz Play-off (Majster)</p>
-
+    <p><b style="color: goldenrod;">Zlatá korčula</b> - Najproduktívnejší hráč Play-off</p>
+    <p><b style="color: goldenrod;">Najlepší strelec</b> - Ráta sa najelpší strelec ZK</p>
 
 </div>
 
