--- a/halloffame.html
+++ b/halloffame.html
@@ -93,7 +93,7 @@
     <table class="medajlove-poradie">
         <thead>
             <th style="text-align: center;">Poz.</th>
-            <th style="text-align: center; width: 200px;">Tím</th>
+            <th style="text-align: center; width: 200px;">Medajlové poradie</th>
             <th style="text-align: center;"><img src="img/med_01.png" height="18"></th>
             <th style="text-align: center;"><img src="img/med_02.png" height="18"></th>
             <th style="text-align: center;"><img src="img/med_03.png" height="18"></th>
