--- a/team.html
+++ b/team.html
@@ -33,7 +33,7 @@
 
 <div style="overflow-y: scroll; height: 800px; background-color: rgb(144,144,144, 0.8);" >
 <div class="kosice-team" >
-        <p class="nazov-klubu">HC KOŠICE</p>
+        <h3 style="text-align: center; color: white; font-weight: bold;">HC KOŠICE</h3>
         <img class="team-logo" src="img/logo/hc_kosice.png" height="100">
         <img src="img/jersey-nhl/kosice.png" height="150" style="margin-left: 50px;">
         <img src="img/jersey-nhl/kosice-vonku.png" height="150">
@@ -78,7 +78,7 @@
 </div>
 
 <div class="slovan-team" >
-        <p class="nazov-klubu">HC SLOVAN BRATISLAVA</p>
+        <h3 style="text-align: center; color: white; font-weight: bold;">HC SLOVAN BRATISLAVA</h3>
         <img class="team-logo" src="img/logo/hc slovan bratislava.png" height="100">
         <img src="img/jersey/slovan.png" height="150" style="margin-left: 50px;">
         <img src="img/jersey/slovan-vonku.png" height="150">
@@ -125,7 +125,7 @@
 </div>
 
 <div class="trencin-team" >
-        <p class="nazov-klubu">HK DUKLA TRENČÍN</p>
+        <h3 style="text-align: center; color: white; font-weight: bold;">HK DUKLA TRENČÍN</h3>
         <img class="team-logo" src="img/logo/trencin.png" height="100">
         <img src="img/jersey-nhl/trencin.png" height="150" style="margin-left: 50px;">
         <img src="img/jersey-nhl/trencin-vonku.png" height="150">
@@ -172,7 +172,7 @@
 
 
 <div class="poprad-team" >
-        <p class="nazov-klubu">HK POPRAD</p>
+        <h3 style="text-align: center; color: white; font-weight: bold;">HK POPRAD</h3>
         <img class="team-logo" src="img/logo/hk_poprad.png" height="100">
         <img src="img/jersey-nhl/poprad.png" height="150" style="margin-left: 50px;">
         <img src="img/jersey-nhl/poprad-vonku.png" height="150">
@@ -219,7 +219,7 @@
 
 
 <div class="bb-team" >
-        <p class="nazov-klubu">HC ’05 iClinic BANSKÁ BYSTRICA</p>
+        <h3 style="text-align: center; color: white; font-weight: bold;">HC ’05 iClinic BANSKÁ BYSTRICA </h3> 
         <img class="team-logo" src="img/logo/hc_05_banská_bystrica.png" height="100">
         <img src="img/jersey-nhl/bystrica.png" height="150" style="margin-left: 50px;">
         <img src="img/jersey-nhl/bystrica-vonku.png" height="150">
@@ -265,7 +265,7 @@
 
 
 <div class="zvolen-team" >
-        <p class="nazov-klubu">MHK ZVOLEN</p>
+        <h3 style="text-align: center; color: white; font-weight: bold;">MHK ZVOLEN </h3> 
         <img class="team-logo" src="img/logo/hkm_zvolen.png" height="100">
         <img src="img/jersey-nhl/zvolen.png" height="150" style="margin-left: 50px;">
         <img src="img/jersey-nhl/zvolen-vonku.png" height="150">
@@ -312,7 +312,7 @@
 
 
 <div class="nitra-team" >
-        <p class="nazov-klubu">HK NITRA</p>
+        <h3 style="text-align: center; color: white; font-weight: bold;">HK NITRA</h3> 
         <img class="team-logo" src="img/logo/hk_nitra.png" height="100">
         <img src="img/jersey-nhl/nitra.png" height="150" style="margin-left: 50px;">
         <img src="img/jersey-nhl/nitra-vonku.png" height="150">
@@ -358,7 +358,7 @@
 
 
 <div class="michalovce-team" >
-        <p class="nazov-klubu">HK DUKLA INGEMA MICHALOVCE</p>
+        <h3 style="text-align: center; color: white; font-weight: bold;"> HK DUKLA INGEMA MICHALOVCE</h3>
         <img class="team-logo" src="img/logo/hk_dukla_michalovce.png" height="100">
         <img src="img/jersey/michalovce.png" height="130" style="margin-left: 50px;">
         <img src="img/jersey/michalovce-vonku.png" height="130">
@@ -404,7 +404,7 @@
 
 
 <div class="detva-team" >
-        <p class="nazov-klubu">HK 07 DETVA</p>
+        <h3 style="text-align: center; color: white; font-weight: bold;">HK 07 DETVA</h3>
         <img class="team-logo" src="img/logo/hc_07_detva.png" height="100">
         <img src="img/jersey/detva.png" height="130" style="margin-left: 50px;">
         <img src="img/jersey/detva-vonku.png" height="130">
@@ -451,7 +451,7 @@
 
 
 <div class="mikulas-team" >
-        <p class="nazov-klubu">MHk 32 LIPTOVSKÝ MIKULÁŠ</p>
+        <h3 style="text-align: center; color: white; font-weight: bold;">MHk 32 LIPTOVSKÝ MIKULÁŠ</h3>
         <img class="team-logo" src="img/logo/mikulas.png" height="100">
         <img src="img/jersey-nhl/mikulas.png" height="150" style="margin-left: 50px;">
         <img src="img/jersey-nhl/mikulas-vonku.png" height="150">
@@ -497,7 +497,7 @@
 
 
 <div class="skalica-team" >
-        <p class="nazov-klubu">HK SKALICA</p>
+        <h3 style="text-align: center; color: white; font-weight: bold;">HK SKALICA</h3>
         <img class="team-logo" src="img/logo/Skalica.png" height="100">
         <img src="img/jersey-nhl/skalica.png" height="150" style="margin-left: 50px;">
         <img src="img/jersey-nhl/skalica-vonku.png" height="150">
@@ -542,8 +542,8 @@
 </div>
 
 
-<div class="snv-team" >
-        <p class="nazov-klubu">HK SPIŠSKÁ NOVÁ VES</p>
+<div class="snv-team">
+        <h3 style="text-align: center; color: white; font-weight: bold;">HK SPIŠSKÁ NOVÁ VES</h3>
         <img class="team-logo" src="img/logo/hk_spisská_nová_ves.png" height="100">
         <img src="img/jersey/snv.png" height="130" style="margin-left: 50px;">
         <img src="img/jersey/snv-vonku.png" height="130">
@@ -589,7 +589,7 @@
 
 
 <div class="zilina-team" >
-        <p class="nazov-klubu">MHK ŽILINA</p>
+        <h3 style="text-align: center; color: white; font-weight: bold;">MHK ŽILINA</h3>
         <img class="team-logo" src="img/logo/zilina.png" height="100">
         <img src="img/jersey-nhl/zilina.png" height="150" style="margin-left: 50px;">
         <img src="img/jersey-nhl/zilina-vonku.png" height="150">
@@ -636,7 +636,7 @@
 
 
 <div class="bardejov-team" >
-        <p class="nazov-klubu">HK BARDEJOV</p>
+        <h3 style="text-align: center; color: white; font-weight: bold;">HK BARDEJOV</h3>
         <img class="team-logo" src="img/logo/bardejov.png" height="100">
         <img src="img/jersey/bardejov.png" height="130" style="margin-left: 50px;">
         <img src="img/jersey/bardejov-vonku.png" height="130">
